testdata/baselines/reference/submodule/conformance/decoratedClassFromExternalModule.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
undecorated.ts(1,23): error TS2307: Cannot find module 'decorated' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== decorated.ts (0 errors) ====
    function decorate(target: any) { }
    
    @decorate
    export default class Decorated { }
    
==== undecorated.ts (1 errors) ====
    import Decorated from 'decorated';
                          ~~~~~~~~~~~
!!! error TS2307: Cannot find module 'decorated' or its corresponding type declarations.